--- a/index.html
+++ b/index.html
@@ -182,42 +182,42 @@
     <h5 class="text-center smallHeader mb-4">Simply good coffee since 2019.</h5>
     <div class="row">
         <div class="col-2 p-0">
-            <img src="imgs/beans_in_bag.jpg" alt="" class="img-fluid">
+            <img src="imgs/share_1.jpg" alt="" class="img-fluid">
         </div>
         <div class="col-2 p-0">
-            <img src="imgs/beans_in_bag.jpg" alt="" class="img-fluid">
+            <img src="imgs/share_2.jpg" alt="" class="img-fluid">
         </div>
         <div class="col-2 p-0">
-            <img src="imgs/beans_in_bag.jpg" alt="" class="img-fluid">
+            <img src="imgs/share_3.jpg" alt="" class="img-fluid">
         </div>
         <div class="col-2 p-0">
-            <img src="imgs/beans_in_bag.jpg" alt="" class="img-fluid">
+            <img src="imgs/share_4.jpg" alt="" class="img-fluid">
         </div>
         <div class="col-2 p-0">
-            <img src="imgs/beans_in_bag.jpg" alt="" class="img-fluid">
+            <img src="imgs/share_5.jpg" alt="" class="img-fluid">
         </div>
         <div class="col-2 p-0">
-            <img src="imgs/beans_in_bag.jpg" alt="" class="img-fluid">
+            <img src="imgs/share_6.jpg" alt="" class="img-fluid">
         </div>
     </div>
     <div class="row">
         <div class="col-2 p-0">
-            <img src="imgs/beans_in_bag.jpg" alt="" class="img-fluid">
+            <img src="imgs/share_7.jpg" alt="" class="img-fluid">
         </div>
         <div class="col-2 p-0">
-            <img src="imgs/beans_in_bag.jpg" alt="" class="img-fluid">
+            <img src="imgs/share_8.jpg" alt="" class="img-fluid">
         </div>
         <div class="col-2 p-0">
-            <img src="imgs/beans_in_bag.jpg" alt="" class="img-fluid">
+            <img src="imgs/share_9.jpg" alt="" class="img-fluid">
         </div>
         <div class="col-2 p-0">
-            <img src="imgs/beans_in_bag.jpg" alt="" class="img-fluid">
+            <img src="imgs/share_10.jpg" alt="" class="img-fluid">
         </div>
         <div class="col-2 p-0">
-            <img src="imgs/beans_in_bag.jpg" alt="" class="img-fluid">
+            <img src="imgs/share_11.jpg" alt="" class="img-fluid">
         </div>
         <div class="col-2 p-0">
-            <img src="imgs/beans_in_bag.jpg" alt="" class="img-fluid">
+            <img src="imgs/share_12.jpg" alt="" class="img-fluid">
         </div>
     </div>
 </section>
